# face_gender_age_detection

./: CMakeLists.txt  men_test.txt  package.xml  woman_test.txt  women_test.txt
gender_and_age/: CMakeLists.txt  package.xml
gender_and_age/scripts/: test_client.py
gender_and_age_msgs/: CMakeLists.txt  package.xml
gender_and_age_msgs/msg/: GenderAndAge.msg  GenderAndAgeList.msg  GenderProbability.msg
msg/: AgeProbability.msg
scripts/: guess_server.py  utils.py  women_test.txt
srv/: GenderAndAgeService.srv
